# kingcrush

./: .gitignore  .gitmodules  .opam_env  LisezMoi.txt  Makefile  Makefile_test  README  TODO  anims.ml  audio.ml  background.ml  board.ml  board_hints.ml  board_position.ml  board_squares.ml  brd_hints.ml  brd_position.ml  brd_squares.ml  configure  controller.ml  desktop.in  dune  dune-project  events.ml  fade.ml  figures.ml  fonts.ml  game.ml  game_info.ml  game_sm.ml  gamekit.ml  gm_streak_controller.ml  gm_streak_menu.ml  gm_streak_menu2.ml  gm_streak_model.ml  gm_streak_score.ml  hints.ml  info.ml  kingcrush.opam  level_details.ml  (+25 more)
.github/workflows/: main.yml
DEV/: NEWS  README.md  mode_aventure.txt  scenes.txt
assets/: dune  themes.txt
data/: dune  theme_groups.txt  themes.txt
data/anims/: explosion1.sc
data/docs/design/: themes.txt
data/docs/design/psy/: PSYGAME.md  anim_jauge_ejac.md  anim_skel.md  gameplay_marmite.md  sons_langoureux.md
data/docs/idees/: jeux_avocats.md  jeux_golf.md  jeux_gravity.md  jeux_psyclick.md  jeux_rpg.txt  jeux_tolerance.md
data/docs/subsister/: alternatif.md
data/levels/: ENDGAMES.rst
data/priv/: deployer.md
data/priv/design/psy/: gameplay_bare.md  gameplay_combo.md
data/priv/idees/: jeux_les_envahisseurs.txt  jeux_nucleaire.md  jeux_outrun.md
data/priv/scripts/: genmli.sh
docs/: mode_aventure.odg
libs/chess/: board.ml  chess.ml  move.ml  puzzles.ml
libs/chesslib/: Makefile  chesslib.ml  dune  dune-project  fen.ml  puzzles.ml  uci.ml
libs/chesslib/test/: dune
libs/chesslibs/: dune  move.ml  puzzles.ml
libs/gamekit/: Makefile  anims.ml  dune  dune-project  easing.ml  gamekit.ml  gamekit.opam  timer.ml  utils.ml
libs/gamekit/test/: dune
priv/: PROCHAINNEMENT_MINESWEEPER  PROCHAINNEMENT_SOLITAIRE
priv/editor_tests/: emacs.el
priv/idees/: jeux_kickboxing.txt
priv/querysteam/: Makefile  TODO  get_reviews.sh  reviews.json
priv/test/: dune  test_things.ml
priv/todo/: PROCHAINEMENT_ALIEN.txt
priv/utils/: configure
src/: audio.ml  background.ml  board_hints.ml  board_position.ml  board_squares.ml  brd_hints.ml  controller.ml  dune  fade.ml  figures.ml  fonts.ml  game_info.ml  gm_streak_model.ml  hints.ml  info.ml  log.cppo  machine.ml  main.ml  map.ml  model.ml  osd.ml  scr_map.ml  streak_hud.ml  streak_menu.ml  streak_model.ml  timer.ml  utils.ml
src/anims/: anims.ml  dune  easing.ml
src/chesslibs/: chess.ml  dune  move.ml  puzzles.ml  uci.ml.later
src/game/: background.ml  controller.ml  dune  fade.ml  game.ml  level_details.ml  level_info.ml  level_over.ml  model.ml  pieces.ml  position.ml  score.ml  sounds.ml  state.ml  view.ml
src/libs/chess/: dune  types.ml  utils.ml
src/libs/gamekit/: dune  spring.ml  utils.ml
support/: desktop.in
support/proj/: TODO
support/scripts/: make
test/: dune  test_things.ml
