; puzzles.csv is allready a target in the main makefile. This rule is here
; for make-release

(install
 (section
  (site
   (kingcrush data)))
 (files puzzles.csv))

(rule
 (mode fallback)
 (alias install)
 (target puzzles.csv)
 (deps puzzles.csv.gz)
 (action
  (system "gzip -dk puzzles.csv.gz")))

;
; pieces pieces
;

(install
 (section
  (site
   (kingcrush pieces)))
 (files
  (include default_theme.sexp)
  (include pixel_theme.sexp)))

(rule
 (deps
  (source_tree pieces/default))
 (action
  (with-stdout-to
   default_theme.sexp
   (system
    "echo '('; \
    for im in pieces/default/*.png; do \
      echo '(' $im as default/$(basename $im) ')'; \
    done; echo ')'"))))

(rule
 (deps
  (source_tree pieces/pixel))
 (action
  (with-stdout-to
   pixel_theme.sexp
   (system
    "echo '('; \
    for im in pieces/pixel/*.png; do \
      echo '(' $im as pixel/$(basename $im) ')'; \
    done; echo ')'"))))

; sounds

(install
 (section
  (site
   (kingcrush sounds)))
 (files
  (include sounds.sexp)))

(rule
 (deps
  (source_tree sounds))
 (action
  (with-stdout-to
   sounds.sexp
   (system "echo '(' sounds/*.wav ')'"))))

; fonts

(install
 (section
  (site
   (kingcrush fonts)))
 (files
  (include fonts.sexp)))

(rule
 (deps
  (source_tree fonts))
 (action
  (with-stdout-to
   fonts.sexp
   (system "echo '(' fonts/*.ttf ')'"))))

; various images

(install
 (section
  (site
   (kingcrush images)))
 (files
  (include images.sexp)))

(rule
 (deps
  (source_tree images))
 (action
  (with-stdout-to
   images.sexp
   (system "echo '(' images/*.png ')'"))))
