(install
 (package kingcrush)
 (section share_root)
 (files
  (puzzles.csv as puzzles.csv)
  (include images.sexp)
  (include fonts.sexp)
  (include sounds.sexp)
  (include pieces_default.sexp)
  (include pieces_pixel.sexp)
  (include anims.sexp)))

(rule
 (target puzzles.csv)
 (deps puzzles.csv.gz)
 (action
   (system "gzip -dk puzzles.csv.gz")))

(rule
 (deps
  (source_tree images))
 (action
  (with-stdout-to
   images.sexp
   (system
    "echo '('; for i in images/*.png; do echo \"($i as $i)\" ; done; echo ')' "))))

(rule
 (deps
  (source_tree fonts))
 (action
  (with-stdout-to
   fonts.sexp
   (system
    "echo '('; for i in fonts/*.ttf; do echo \"($i as $i)\" ; done; echo ')' "))))

(rule
 (deps
  (source_tree sounds))
 (action
  (with-stdout-to
   sounds.sexp
   (system
    "echo '('; for i in sounds/*.wav; do echo \"($i as $i)\" ; done; echo ')' "))))

(rule
 (deps
  (source_tree pieces/pixel))
 (action
  (with-stdout-to
   pieces_pixel.sexp
   (system
    "echo '('; for i in pieces/pixel/*.png; do echo \"($i as $i)\" ; done; echo ')' "))))

(rule
 (deps
  (source_tree pieces/default))
 (action
  (with-stdout-to
   pieces_default.sexp
   (system
    "echo '('; for i in pieces/default/*.png; do echo \"($i as $i)\" ; done; echo ')' "))))

(rule
 (deps
  (source_tree anims))
 (action
  (with-stdout-to
   anims.sexp
   (system
    "echo '('; for i in anims/*.png; do echo \"($i as $i)\" ; done; echo ')' "))))
