(lang dune 3.15)

(name gamekit)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name gamekit)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
   ocaml
   dune
   (tsdl  (= 0.9.9))
   (tsdl-mixer (= 0.3.2))
 )
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
